# cookbook-python-polars

./: .gitignore  README.md  _agg.qmd  _bind.qmd  _datetime.qmd  _filter.qmd  _join.qmd  _modify.qmd  _null.qmd  _other.qmd  _pivot.qmd  _quarto.yml  _select.qmd  _sort.qmd  _string.qmd  agg.py  create_ontime_db.py  create_ontime_sqlite.py  data_manipulation.qmd  download-data.py  eda.ipynb  examples.qmd  first_steps.qmd  import_export.qmd  index.qmd  lazy_execution.qmd  prompts.md  pyproject.toml  read-multiple-csv.ipynb  read-multiple-csv.py  references.qmd  requirements.txt  stars-history.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  _quarto-checkpoint.yml  eda-checkpoint.ipynb  examples-checkpoint.qmd  first_steps-checkpoint.qmd  import_export-checkpoint.qmd  index-checkpoint.qmd  r-kernel-checkpoint.ipynb  read-multiple-csv-checkpoint.ipynb  references-checkpoint.qmd  stars-history-checkpoint.ipynb
.jupyter/: desktop-settings.json
R/: read-csv.R  stars-history.R
_book/: benchmarking.html  data_manipulation.html  first_steps.html  import_export.html  index.html  intro.html  lazy_execution.html  references.html  search.json  summary.html
docs/: Untitled.html  benchmarking.html  custom.css  data_manipulation.html  examples.html  first_steps.html  import_export.html  index.html  intro.html  lazy_execution.html  references.html  search.json  summary.html
polars-exercises/: 01-getting-and-knowing-your-data.py  babynames.ipynb  cc-overdue.py  chapter-10-data-aggregation.ipynb  chapter-10-data-aggregation.py  data-type.py  download-babynames-data.py  (+1 more)
(+4 files in other folders)
